cmake_minimum_required(VERSION 3.18)
project(nebula C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

option(NEBULA_BUILD_TESTS "Build Nebula tests" OFF)


# Find CUDA, if available
include(CheckLanguage)
check_language(CUDA)
if(CMAKE_CUDA_COMPILER)
	enable_language(CUDA)

	if(CMAKE_CUDA_COMPILER_VERSION LESS 9.2)
		message(STATUS "Compiling without CUDA support: version 9.2 or higher required.")
		set(USE_CUDA OFF)
	else()
		set(USE_CUDA ON)

		set(CMAKE_CUDA_STANDARD 17)
		set(CMAKE_CUDA_STANDARD_REQUIRED ON)
		set(CMAKE_CUDA_EXTENSIONS OFF)
		add_definitions(-DCUDA_HEADERS_AVAILABLE=1)
		include_directories(${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
	endif()
else()
	message(STATUS "Compiling without CUDA support: no compiler found")
	set(USE_CUDA OFF)
endif()


# Find HDF5 library
find_package(HDF5 1.8.13 REQUIRED C HL)
include_directories(${HDF5_INCLUDE_DIRS})
add_definitions(${HDF5_DEFINITIONS})
list(APPEND LIBRARIES ${HDF5_LIBRARIES} ${HDF5_HL_LIBRARIES})
if(WIN32)
	list(APPEND LIBRARIES Shlwapi)
endif()

# Find MPI library if compiling against parallel HDF5
if(HDF5_IS_PARALLEL)
	find_package(MPI REQUIRED)
	include_directories(${MPI_CXX_INCLUDE_PATH})
	list(APPEND LIBRARIES ${MPI_CXX_LIBRARIES})
endif()

# Find threading library
find_package(Threads REQUIRED)


if(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE "Release" CACHE STRING
		"Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel."
		FORCE)
endif()

string(APPEND CMAKE_CUDA_FLAGS " --expt-relaxed-constexpr")
string(APPEND CMAKE_CUDA_FLAGS " -prec-sqrt=false")

if(NEBULA_BUILD_TESTS)
	enable_testing()

	if(NOT NEBULA_TESTDATA_DIR)
		get_filename_component(NEBULA_ROOT "${CMAKE_CURRENT_LIST_DIR}" ABSOLUTE)
		get_filename_component(COLORCUBE_ROOT "${NEBULA_ROOT}/../.." ABSOLUTE)
		set(NEBULA_TESTDATA_DIR "${COLORCUBE_ROOT}/testdata" CACHE PATH "Path to ColorCube testdata")
	endif()
endif()

add_subdirectory(source)
